fixed error in keyword usage

--- a/roles/helm-lint/tasks/main.yml
+++ b/roles/helm-lint/tasks/main.yml
@@ -10,9 +10,10 @@
 - name: Install helm
   shell: |
     curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get | bash
+  args:
+    warn: false
   when: 
   - install_helm == 'yes'
-  warn: false
 
 - name: Linting through charts
   import_tasks: multiple_charts.yml
