--- a/roles/runner/tasks/main.yml
+++ b/roles/runner/tasks/main.yml
@@ -6,3 +6,8 @@
 
 - name: Remove all stopped containers, all networks not used by at least one container, all dangling images, all dangling build cache
   shell: docker system prune -f
+  ignore_errors: true
+
+- name: Remove all docker images
+  shell: docker rmi $(docker images -q) -f
+  ignore_errors: true
