set the runlevel since we are using systemd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ test_ubuntu_latest:
   before_script:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
+  - export RUNLEVEL=1
   - apt-get update
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:  
@@ -26,6 +27,7 @@ test_ubuntu_16:
   before_script:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
+  - export RUNLEVEL=1
   - apt-get update
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
@@ -42,6 +44,7 @@ test_debian_stretch-slim:
   before_script:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
+  - export RUNLEVEL=1
   - apt-get update
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
