deploy latest minikube

--- a/roles/integration/tasks/minikube.yml
+++ b/roles/integration/tasks/minikube.yml
@@ -35,7 +35,7 @@
 - name: Install minikube
   become_user: "{{ ansible_user }}"
   shell: |
-    curl -kLo minikube https://storage.googleapis.com/minikube/releases/v1.2.0/minikube-linux-amd64 && chmod +x minikube
+    curl -kLo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube
   when: minikube_installed.stat.exists == false
 
 - name: Move minikube
@@ -73,6 +73,7 @@
   become_user: "{{ ansible_user }}"
   shell: |
     sudo -E minikube start --vm-driver=none --extra-config=kubelet.resolv-conf=/var/run/systemd/resolve/resolv.conf
+    sudo -E minikube addons disable ingress
 
 - name: Setting on minukube
   shell: |
