--- a/roles/integration/tasks/start.yml
+++ b/roles/integration/tasks/start.yml
@@ -31,7 +31,7 @@
 
 - name: Change file ownership, group and permissions
   file:
-    path: /usr/src/k8s-integration
+    path: /usr/src/skampi
     owner: '{{ ansible_user }}'
     group: '{{ ansible_user }}'
 
