added pyenv role and set python version 3.7.3

--- a/deploy_tangoenv.yml
+++ b/deploy_tangoenv.yml
@@ -12,6 +12,7 @@
     start_tango: 'yes'
     update_hosts: 'yes'
     pycharm_version: 'community-2018.3.3'
+    PYTHON_VERSION: '3.7.3'
     TANGO_VERSION: '9.2.5a'
     ZEROMQ_VERSION: '4.0.8'
     OMNIORB_VERSION: '4.2.3'
@@ -19,6 +20,7 @@
     #vscode version 1.30
   become: yes
   roles:
+    - pyenv
     - ide
     - mysqlserver
     - tango
