removed curl warning

--- a/roles/pyenv/tasks/main.yml
+++ b/roles/pyenv/tasks/main.yml
@@ -30,6 +30,7 @@
   shell: curl https://pyenv.run | bash
   args:
     creates: "{{ localhome }}/.pyenv"
+    warn: false
 
 - name: Add path etc to .bashrc.
   become: yes
