ST-251 install missing package

--- a/roles/pytango/tasks/main.yml
+++ b/roles/pytango/tasks/main.yml
@@ -27,6 +27,7 @@
         - python3-pip
         - python-apt
         - virtualenv
+        - zlib1g-dev
     state: latest
     force: yes 
     update_cache: yes
