--- a/roles/pytango/tasks/main.yml
+++ b/roles/pytango/tasks/main.yml
@@ -19,20 +19,6 @@
     force: yes
   when: install_pytango == 'yes'
 
-- name: Install libboost-python-dev python3-dev python3-pip python-apt virtualenv apt for pytango
-  apt:
-    name:
-        - libboost-python-dev 
-        - python3-dev 
-        - python3-pip
-        - python-apt
-        - virtualenv
-        - zlib1g-dev
-    state: latest
-    force: yes 
-    update_cache: yes
-  when: install_pytango == 'yes'
-
 - name: Copy environment.sh
   copy:
     src: "{{playbook_dir}}/roles/pytango/files/environment.sh"
@@ -62,6 +48,29 @@
     - install_pytango == 'yes'
     - python_exe.stat.exists == false
 
+- name: Install dependencies for pytango
+  apt:
+    name:
+        - libboost-python-dev 
+        - python3-dev 
+        - python3-pip
+        - python-apt
+        - virtualenv
+        - dpkg-dev
+        - libffi-dev
+        - libreadline-gplv2-dev 
+        - libncursesw5-dev 
+        - libssl-dev 
+        - libsqlite3-dev 
+        - tk-dev 
+        - libgdbm-dev 
+        - libc6-dev 
+        - libbz2-dev
+    state: latest
+    force: yes 
+    update_cache: yes
+  when: install_pytango == 'yes'
+
 - name: Install pytango on virtualenv with pipenv 
   shell: |
     cd /build_pytango_dir
@@ -76,6 +85,9 @@
     pwd
     virtualenv -p /usr/local/bin/python3.7 /venv
     pip3 install pipenv
+    ln -sf /usr/lib/x86_64-linux-gnu/libz.so /usr/lib/libz.so
+    ln -sf /usr/lib/x86_64-linux-gnu/libboost_python3-py36.so /usr/lib/x86_64-linux-gnu/libboost_python-py37.so
+    ln -sf /usr/lib/x86_64-linux-gnu/libboost_python3-py36.so /usr/local/lib/libboost_python-py37.so
     pipenv install --dev
   when: 
     - ansible_distribution_release != "buster"
