--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test_ubuntu_18:
   - apt-add-repository --yes --update ppa:ansible/ansible 
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
-  - python3 -c "import tango; print(tango.utils.info())
+  - python3 -c "import tango; print(tango.utils.info())"
   
 test_ubuntu_16:
   image: ubuntu:16.04
@@ -32,7 +32,7 @@ test_ubuntu_16:
   - apt-add-repository --yes --update ppa:ansible/ansible 
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
-  - python3 -c "import tango; print(tango.utils.info())
+  - python3 -c "import tango; print(tango.utils.info())"
 
 test_debian_stretch-slim:
   image: debian:stretch-slim
@@ -51,7 +51,7 @@ test_debian_stretch-slim:
   - apt-get update
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
-  - python3 -c "import tango; print(tango.utils.info())
+  - python3 -c "import tango; print(tango.utils.info())"
 
 test_debian_buster-slim:
   image: debian:buster-slim
@@ -70,4 +70,4 @@ test_debian_buster-slim:
   - apt-get update
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
-  - python3 -c "import tango; print(tango.utils.info())
+  - python3 -c "import tango; print(tango.utils.info())"
