ST-251 activate venv to test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ test_ubuntu_18:
   - apt-add-repository --yes --update ppa:ansible/ansible 
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
+  - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
   
 test_ubuntu_16:
@@ -32,6 +33,7 @@ test_ubuntu_16:
   - apt-add-repository --yes --update ppa:ansible/ansible 
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
+  - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
 
 test_debian_stretch-slim:
@@ -51,6 +53,7 @@ test_debian_stretch-slim:
   - apt-get update
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
+  - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
 
 test_debian_buster-slim:
@@ -70,4 +73,5 @@ test_debian_buster-slim:
   - apt-get update
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
+  - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
